--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <meta name="author" content="Nahid Alam">
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <title>Controller</title>
+        <script src="main.js"></script>
+        <title>GuardTime Technology Oveview</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <h1>Controller</h1>
+      <header>
+        <div class="container">
+          <div id="branding">
+            <h1>GuardTime Technology Demo</h1>
+          </div>
+        </div>
+      </header>
 
-        <p><input type="button" value="Distribute" id="poke" /></p>
+      <input type="button" value="Distribute" id="poke">
 
 
 
