--- a/local.html
+++ b/local.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Nahid Alam">
-    <script src="jquery-1.11.0.min.js"></script>
-    <script src="socket.io-1.0.6.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
     <title>GuardTime Technology Oveview| Welcome</title>
     <link rel="stylesheet" href="./style.css">
