--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </header>
 
       <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='index.html';">
-      <br>
-      <input type="button" value="Distribute" id="poke">
+      <!--<input type="button" value="Distribute" id="poke">-->
       <br>
       <input type = "text" placeholder="Enter Your Name" id = "txtSearch"
        onkeydown = "if (event.keyCode == 13)
@@ -30,7 +29,7 @@
       <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHide();">
       <br>
       <input type = "button" id = "btnLocal" value = "Local" class = "hidden" onclick = "location.href='local.html';">
-      <input type = "button" id = "btnDist" value = "Distributed" class = "hidden" onclick = "doDist();">
+      <input type = "button" id = "btnDist" value = "Distributed" class = "hidden" >
       <input type = "button" id = "btnGT" value = "GuardTime" class = "hidden" onclick = "doGT();">
 
 
@@ -40,7 +39,10 @@
             var username = "helloworld";
 
             // When the button is clicked, a "message" is sent to the server
-            $('#poke').click(function () {
+            /*$('#poke').click(function () {
+                socket.emit('message', username);
+            })*/
+            $('#btnDist').click(function () {
                 socket.emit('message', username);
             })
         </script>
