distributing variable name with new page

--- a/dist.html
+++ b/dist.html
@@ -27,8 +27,8 @@
 
     <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();">
     <br>
-    <input type = "button" id = "btnLocal" value = "Save Again" class = "hiddenLocalButton" onclick = "location.href='local.html';">
+    <input type = "button" id = "btnLocal" value = "Distribute" class = "hiddenLocalButton" onclick = "location.href='dist.html';">
     <br>
-    <div class = "message" id ="localMsg"> Saved Local</div>
+    <div class = "message" id ="distMsg"> Saved Local and Distributed</div>
   </body>
 </html>
