--- a/local.html
+++ b/local.html
@@ -21,7 +21,7 @@
     </header>
     <input type = "button" id = "btnReset" value = "Reset" onclick = "location.href='index.html';">
     <br>
-    <input type = "text" placeholder="Enter Your Name" id = "txtName"
+    <input type = "text" placeholder="Enter Your Name" id = "txtNameLocal"
        onkeydown = "if (event.keyCode == 13)
                         document.getElementById('btnSubmit').click()">
 
