--- a/index.html
+++ b/index.html
@@ -39,23 +39,32 @@
 
         <script>
             var socket = io.connect('http://localhost:8080');
-            var username = "NAHID";
+            var username = "HELLO";
+            var flag="false";
 
-            // When the button is clicked, a "message" is sent to the server
-            /*$('#poke').click(function () {
-                socket.emit('message', username);
-            })*/
+
             $('#btnDist').click(function () {
               var name = document.getElementById("txtName").value;
-              localStorage.setItem("storageName",name);
-              socket.emit('message', name);
+              //localStorage.setItem("storageName",name);
+
               //location.href='dist.html';
               document.getElementById("btnLocal").style.display="none";
               document.getElementById("btnGT").style.display="none";
               document.getElementById("btnSubmit").style.display="none";
-              //$('#chat_zone').prepend('<p>' + ':saved locally and distributed' + '</p>');
-              $('#chat_zone').prepend('saved locally and distributed');
+              if (flag =="false"){
+                socket.emit('message', name);
+                //$('#chat_zone').prepend('<p>' + ':saved locally and distributed' + '</p>');
+                $('#chat_zone').prepend('saved locally and distributed');
+                $('#chat_zone').prepend('<p><strong>' + name + '</strong></p>');
+                flag = "true";
+            }
+            else{
+              //emit some signal telling its a wrong try
+              socket.emit('wrong', name);
+              $('#chat_zone').prepend('Cant saved locally and distribute');
               $('#chat_zone').prepend('<p><strong>' + name + '</strong></p>');
+
+            }
 
             })
         </script>
