--- a/client.html
+++ b/client.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Socket.io</title>
+        <title>Data Nerd</title>
     </head>
 
     <body>
-        <h1>Tablet Client!</h1>
+        <h1>Your Data Here</h1>
 
         <section id="chat_zone">
 
