Final version with all local features

--- a/local.html
+++ b/local.html
@@ -7,7 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js"></script>
-    <title>GuardTime Technology Oveview| Welcome</title>
+    <title>Data Flow Architecture</title>
     <link rel="stylesheet" href="./style.css">
   </head>
 
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>GuardTime Technology Demo</h1>
+          <h1>Data Flow Architecture</h1>
         </div>
       </div>
     </header>
