--- a/client.html
+++ b/client.html
@@ -15,23 +15,34 @@
         <h1>Your Data Here</h1>
         <section class = "borderclient" id="chat_zone">
 
+        </section> <br>
+
+        <section class = "borderclient" id="chat_zone2">
+
         </section>
         <script>
             var socket = io.connect('http://localhost:8080');
+            var count = 0;
             document.getElementById("chat_zone").style.display="none";
+            document.getElementById("chat_zone2").style.display="none";
 
             // When a message is received it's inserted in the page
             socket.on('C', function(data) {
-                //console.log(data)
                 //insertMessage(data)
-                document.getElementById("chat_zone").style.display="block";
-                $('#chat_zone').prepend('<p><strong>' + data + '</strong></p>');
+                count++;
+                if (count == 1){
+                  document.getElementById("chat_zone").style.display="block";
+                  $('#chat_zone').prepend('<p><strong>' + data + '</strong></p>');
+              }
+              else {
+                document.getElementById("chat_zone2").style.display="block";
+                $('#chat_zone2').prepend('<p><strong>' + data + '</strong></p>');
+              }
             })
 
             socket.on('W', function(data) {
-                //document.getElementById("chat_zone").className = "blink";
-                //$('#chat_zone').prepend('<p><strong>' + 'Failed attempt to modify data'+ '</strong></p>');
-                setTimeout(function() {
+                document.getElementById("chat_zone").className = "blink";
+                /*setTimeout(function() {
                   setInterval(function() {
                     document.getElementById("chat_zone").style.borderColor = "#f4f4f4";
                   }, 1000);
@@ -39,7 +50,16 @@
 
                 setInterval(function() {
                   document.getElementById("chat_zone").style.borderColor = "red";
-                }, 1000);
+                }, 1000);*/
+                var startTime = new Date().getTime();
+                var interval = setInterval(function(){
+                if(new Date().getTime() - startTime > 60000){
+                  clearInterval(interval);
+                  return;
+                }
+                //do whatever here..
+                document.getElementById("chat_zone").className = "borderclient";
+              }, 10000);
 
             })
 
