--- a/dist.html
+++ b/dist.html
@@ -29,24 +29,40 @@
     <input type = "button" id = "btnSubmit" value = "Submit" onclick = "showHideLocal();">
     <br>
     <input type = "button" id = "btnDistSave" value = "Save Again" class = "hiddenLocalButton">
-    <br>
+    <input type = "button" id = "btnDistAdd" value = "Add Data" class = "hiddenLocalButton">
+    <br><br>
     <section class="borderexample" id="data_zone">
+
+    </section> <br>
+    <section class="borderexample" id="data_zone2">
 
     </section>
     <script>
         var socket = io.connect('http://localhost:8080');
         document.getElementById("btnSubmit").style.display="none";
+        document.getElementById("data_zone2").style.display="none";
         var gotName = localStorage.getItem("storageNameDist");
         $('#data_zone').prepend('<p><strong>' + gotName + '</strong></p>');
         socket.emit('message', gotName);
 
         $('#btnDistSave').click(function () {
           var color = document.getElementById("txtNameDist").value;
-
-          document.getElementById("btnDistSave").style.display="none";
-          document.getElementById("txtNameDist").style.display="none";
+          document.getElementById("data_zone2").style.display="none";
+          //document.getElementById("btnDistSave").style.display="none";
+          //document.getElementById("txtNameDist").style.display="none";
           //emit some signal telling its a wrong try
           socket.emit('wrong', color);
+        })
+        $('#btnDistAdd').click(function () {
+          var color = document.getElementById("txtNameDist").value;
+
+          document.getElementById("btnDistSave").style.display="none";
+          document.getElementById("btnDistAdd").style.display="none";
+          document.getElementById("txtNameDist").style.display="none";
+          document.getElementById("data_zone2").style.display="block";
+          $('#data_zone2').prepend('<p><strong>' + color + '</strong></p>');
+          //send this data for adding
+          socket.emit('message', color);
         })
     </script>
   </body>
