Local updated, hybrid wip

--- a/client.html
+++ b/client.html
@@ -12,14 +12,21 @@
     </head>
 
     <body>
-        <h1>Your Data Here</h1>
-        <section class = "borderclient" id="chat_zone">
+      <header>
+        <div class="container">
+          <div id="branding">
+            <h1>Your Data Here</h1>
+          </div>
+        </div>
+      </header>
+      <br>
+      <section class = "borderclient" id="chat_zone">
 
-        </section> <br>
+      </section> <br>
 
-        <section class = "borderclient" id="chat_zone2">
+      <section class = "borderclient" id="chat_zone2">
 
-        </section>
+      </section>
         <script>
             var socket = io.connect('http://localhost:8080');
             var count = 0;
