--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             //GT button action
             $('#btnGT').click(function () {
               var name = document.getElementById("txtName").value;
-              //localStorage.setItem("storageName",name);
-
-              document.getElementById("btnLocal").style.display="none";
+              localStorage.setItem("storageNameGT",name);
+              location.href='hybrid.html';
+              /*document.getElementById("btnLocal").style.display="none";
               document.getElementById("btnDist").style.display="none";
               document.getElementById("btnSubmit").style.display="none";
               if (flagGT =="false"){
@@ -93,7 +93,7 @@
                 $('#chat_zone').prepend('Data saved locally but cant distribute signature');
                 $('#chat_zone').prepend('<p><strong>' + name + '</strong></p>');
                 $('#chat_zone').prepend('<img id="badsign" src="fp2.jpeg" />');
-              }
+              }*/
             })
         </script>
     </body>
