--- a/hybrid.html
+++ b/hybrid.html
@@ -41,21 +41,16 @@
         var socket = io.connect('http://localhost:8080');
         document.getElementById("btnSubmit").style.display="none";
         document.getElementById("data_zone2").style.display="none";
-        document.getElementById("data_zone3").style.display="none";
+        //document.getElementById("data_zone3").style.display="none";
         var gotName = localStorage.getItem("storageNameGT");
-        $('#data_zone').prepend('<p><strong>' + gotName + '</strong></p>');
-        socket.emit('messageGT', name);
-        $('#data_zone').prepend('<p><strong>' + name + '</strong></p>');
-        $('#data_zone').prepend('<img id="goodsign" src="fp1.jpg" />');
+        socket.emit('messageGT', gotName);
+        document.querySelector('#data_zone').innerHTML = '<p><strong>' + gotName + '</strong></p>' + '<img id="imgABC" src="fp1.jpg" />';
+
 
         $('#btnDistSave').click(function () {
           var color = document.getElementById("txtNameDist").value;
-          //document.getElementById("data_zone3").style.display="none";
-          document.getElementById("data_zone2").style.display="block";
-          //document.getElementById("btnDistSave").style.display="none";
-          //document.getElementById("txtNameDist").style.display="none";
-          $('#data_zone2').prepend('<p><strong>' + color + '</strong></p>');
-          $('#data_zone2').prepend('<img id="badsign" src="fp2.jpeg" />');
+          //document.getElementById("data_zone2").style.display="block";
+          document.querySelector('#data_zone').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgABC" src="fp1.jpg" />';
           //emit some signal telling its a wrong try
           socket.emit('wrongGT', color);
         })
@@ -65,9 +60,9 @@
           document.getElementById("btnDistSave").style.display="none";
           document.getElementById("btnDistAdd").style.display="none";
           document.getElementById("txtNameDist").style.display="none";
-          //document.getElementById("data_zone3").style.display="block";
-          $('#data_zone3').prepend('<p><strong>' + color + '</strong></p>');
-          $('#data_zone3').prepend('<img id="badsign" src="fp2.jpeg" />');
+          document.getElementById("data_zone2").style.display="block";
+          document.querySelector('#data_zone2').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgXYZ" src="fp2.jpeg" />';
+
           //send this data for adding
           socket.emit('messageGT', color);
         })
