All done except adding two box inside another box

--- a/client.html
+++ b/client.html
@@ -88,11 +88,11 @@
               countGT++;
               if (countGT == 1){
                 document.getElementById("chat_zone").style.display="block";
-                $('#chat_zone').prepend('<img id="imgABC" src="fp1.jpg" />');
+                $('#chat_zone').prepend('<img id="imgABC" src="imgABC.png" />');
               }
               else {
                 document.getElementById("chat_zone2").style.display="block";
-                $('#chat_zone2').prepend('<img id="imgABC" src="fp2.jpeg" />');
+                $('#chat_zone2').prepend('<img id="imgABC" src="imgXYZ.png" />');
               }
             })
 
