--- a/hybrid.html
+++ b/hybrid.html
@@ -44,13 +44,17 @@
         //document.getElementById("data_zone3").style.display="none";
         var gotName = localStorage.getItem("storageNameGT");
         socket.emit('messageGT', gotName);
-        document.querySelector('#data_zone').innerHTML = '<p><strong>' + gotName + '</strong></p>' + '<img id="imgABC" src="fp1.jpg" />';
+        document.querySelector('#data_zone').innerHTML = '<p><strong>' + gotName + '</strong></p>' + '<img id="imgABC" src="imgABC.png" />';
+        //document.querySelector("#data_zone").innerHTML ='<p><strong>' + gotName + '<p><strong>' + '<div><img id="imgABC" src="imgABC.png" /><div>';
 
+        //document.querySelector("#data_zone").innerHTML ="<p><strong>" +gotName +"</strong></p>" +'<div><img id="imgABC" src="imgABC.png" /><div>';
 
         $('#btnDistSave').click(function () {
           var color = document.getElementById("txtNameDist").value;
           //document.getElementById("data_zone2").style.display="block";
-          document.querySelector('#data_zone').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgABC" src="fp1.jpg" />';
+          document.querySelector('#data_zone').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgABC" src="imgABC.png" />';
+          //document.querySelector("#data_zone").innerHTML = "<p><strong>" + color + "</strong></p>" + '<div><img id="imgABC" src="imgABC.png" /><div>';
+
           //emit some signal telling its a wrong try
           socket.emit('wrongGT', color);
         })
@@ -61,8 +65,8 @@
           document.getElementById("btnDistAdd").style.display="none";
           document.getElementById("txtNameDist").style.display="none";
           document.getElementById("data_zone2").style.display="block";
-          document.querySelector('#data_zone2').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgXYZ" src="fp2.jpeg" />';
-
+          document.querySelector('#data_zone2').innerHTML = '<p><strong>' + color + '</strong></p>' + '<img id="imgXYZ" src="imgXYZ.png" />';
+          //document.querySelector("#data_zone2").innerHTML ="<p><strong>" +color +"</strong></p>" +'<div><img id="imgXYZ" src="imgXYZ.png" /><div>';
           //send this data for adding
           socket.emit('messageGT', color);
         })
