Updated socket.io port

--- a/client.html
+++ b/client.html
@@ -32,7 +32,8 @@
       <br>
     </div>
         <script>
-            var socket = io.connect('http://localhost:8080');
+            var socket = io.connect('http://www.ciscochill.com:80');
+            //var socket = io.connect('http://localhost:8080');
             var count = 0;
             var countGT = 0;
             document.getElementById("chat_zone").style.display="none";
